--- a/css/contact.css
+++ b/css/contact.css
@@ -1,7 +1,7 @@
 .version.contact /* version checker */
 {
-	color: #000009;
-	background-color: #9ABDAB;
+	color: #0000FE;
+	background-color: #16912F;
 }
 
 #muse_css_mq
@@ -449,8 +449,8 @@
 	width: 782px;
 	min-height: 56px;
 	background-color: transparent;
-	font-size: 16px;
 	line-height: 19px;
+	font-size: 16px;
 	font-family: bitter, serif;
 	font-weight: 400;
 	position: relative;
