--- a/css/donate.css
+++ b/css/donate.css
@@ -1,7 +1,7 @@
 .version.donate /* version checker */
 {
-	color: #000006;
-	background-color: #587AEC;
+	color: #0000ED;
+	background-color: #5F6AA1;
 }
 
 #muse_css_mq
@@ -447,8 +447,8 @@
 	width: 782px;
 	min-height: 323px;
 	background-color: transparent;
-	font-size: 16px;
 	line-height: 19px;
+	font-size: 16px;
 	font-family: bitter, serif;
 	font-weight: 400;
 	position: relative;
