--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,7 +1,7 @@
 .version.portfolio /* version checker */
 {
 	color: #0000EA;
-	background-color: #AF7B80;
+	background-color: #5F908C;
 }
 
 #muse_css_mq
@@ -438,8 +438,8 @@
 	width: 782px;
 	min-height: 26px;
 	background-color: transparent;
-	font-size: 16px;
 	line-height: 19px;
+	font-size: 16px;
 	font-family: bitter, serif;
 	font-weight: 400;
 	position: relative;
@@ -551,9 +551,9 @@
 	width: 239px;
 	min-height: 151px;
 	background-color: transparent;
+	line-height: 20px;
 	text-align: center;
 	font-size: 17px;
-	line-height: 20px;
 	font-family: bitter, serif;
 	font-weight: 400;
 	position: relative;
@@ -610,9 +610,9 @@
 	width: 245px;
 	min-height: 151px;
 	background-color: transparent;
+	line-height: 20px;
 	text-align: center;
 	font-size: 17px;
-	line-height: 20px;
 	font-family: bitter, serif;
 	font-weight: 400;
 	position: relative;
@@ -654,9 +654,9 @@
 	width: 245px;
 	min-height: 151px;
 	background-color: transparent;
+	line-height: 20px;
 	text-align: center;
 	font-size: 17px;
-	line-height: 20px;
 	font-family: bitter, serif;
 	font-weight: 400;
 	position: relative;
@@ -716,9 +716,9 @@
 	width: 245px;
 	min-height: 156px;
 	background-color: transparent;
+	line-height: 20px;
 	text-align: center;
 	font-size: 17px;
-	line-height: 20px;
 	font-family: bitter, serif;
 	font-weight: 400;
 	position: relative;
@@ -784,10 +784,10 @@
 	width: 782px;
 	min-height: 60px;
 	background-color: transparent;
-	text-align: center;
-	font-size: 25px;
 	color: #E792C4;
 	line-height: 30px;
+	text-align: center;
+	font-size: 25px;
 	font-family: bitter, serif;
 	font-weight: 400;
 	margin-left: 80px;
@@ -811,9 +811,9 @@
 	border-style: solid;
 	border-width: 1px;
 	border-color: #E792C4;
+	line-height: 20px;
 	text-align: center;
 	font-size: 17px;
-	line-height: 20px;
 	font-family: bitter, serif;
 	font-weight: 400;
 	margin-bottom: -1px;
@@ -847,9 +847,9 @@
 	border-style: solid;
 	border-width: 1px;
 	border-color: #E792C4;
+	line-height: 20px;
 	text-align: center;
 	font-size: 17px;
-	line-height: 20px;
 	font-family: bitter, serif;
 	font-weight: 400;
 	margin-bottom: -1px;
@@ -884,9 +884,9 @@
 	border-style: solid;
 	border-width: 1px;
 	border-color: #E792C4;
+	line-height: 20px;
 	text-align: center;
 	font-size: 17px;
-	line-height: 20px;
 	font-family: bitter, serif;
 	font-weight: 400;
 	margin-bottom: -1px;
@@ -928,9 +928,9 @@
 	border-style: solid;
 	border-width: 1px;
 	border-color: #E792C4;
+	line-height: 20px;
 	text-align: center;
 	font-size: 17px;
-	line-height: 20px;
 	font-family: bitter, serif;
 	font-weight: 400;
 	position: relative;
@@ -963,9 +963,9 @@
 	border-style: solid;
 	border-width: 1px;
 	border-color: #E792C4;
+	line-height: 20px;
 	text-align: center;
 	font-size: 17px;
-	line-height: 20px;
 	font-family: bitter, serif;
 	font-weight: 400;
 	margin-bottom: -1px;
@@ -1001,9 +1001,9 @@
 	border-style: solid;
 	border-width: 1px;
 	border-color: #E792C4;
+	line-height: 20px;
 	text-align: center;
 	font-size: 17px;
-	line-height: 20px;
 	font-family: bitter, serif;
 	font-weight: 400;
 	position: relative;
@@ -1050,9 +1050,9 @@
 	border-style: solid;
 	border-width: 1px;
 	border-color: #E792C4;
+	line-height: 20px;
 	text-align: center;
 	font-size: 17px;
-	line-height: 20px;
 	font-family: bitter, serif;
 	font-weight: 400;
 	position: relative;
@@ -1085,9 +1085,9 @@
 	border-style: solid;
 	border-width: 1px;
 	border-color: #E792C4;
+	line-height: 20px;
 	text-align: center;
 	font-size: 17px;
-	line-height: 20px;
 	font-family: bitter, serif;
 	font-weight: 400;
 	margin-bottom: -1px;
@@ -1123,9 +1123,9 @@
 	border-style: solid;
 	border-width: 1px;
 	border-color: #E792C4;
+	line-height: 20px;
 	text-align: center;
 	font-size: 17px;
-	line-height: 20px;
 	font-family: bitter, serif;
 	font-weight: 400;
 	margin-bottom: -1px;
@@ -1161,9 +1161,9 @@
 	border-style: solid;
 	border-width: 1px;
 	border-color: #E792C4;
+	line-height: 20px;
 	text-align: center;
 	font-size: 17px;
-	line-height: 20px;
 	font-family: bitter, serif;
 	font-weight: 400;
 	margin-bottom: -1px;
@@ -1197,9 +1197,9 @@
 	border-style: solid;
 	border-width: 1px;
 	border-color: #E792C4;
+	line-height: 20px;
 	text-align: center;
 	font-size: 17px;
-	line-height: 20px;
 	font-family: bitter, serif;
 	font-weight: 400;
 	margin-bottom: -1px;
@@ -1234,9 +1234,9 @@
 	border-style: solid;
 	border-width: 1px;
 	border-color: #E792C4;
+	line-height: 20px;
 	text-align: center;
 	font-size: 17px;
-	line-height: 20px;
 	font-family: bitter, serif;
 	font-weight: 400;
 	margin-bottom: -1px;
@@ -1278,9 +1278,9 @@
 	border-style: solid;
 	border-width: 1px;
 	border-color: #E792C4;
+	line-height: 20px;
 	text-align: center;
 	font-size: 17px;
-	line-height: 20px;
 	font-family: bitter, serif;
 	font-weight: 400;
 	margin-bottom: -1px;
@@ -1314,9 +1314,9 @@
 	border-style: solid;
 	border-width: 1px;
 	border-color: #E792C4;
+	line-height: 20px;
 	text-align: center;
 	font-size: 17px;
-	line-height: 20px;
 	font-family: bitter, serif;
 	font-weight: 400;
 	margin-bottom: -1px;
@@ -1351,9 +1351,9 @@
 	border-style: solid;
 	border-width: 1px;
 	border-color: #E792C4;
+	line-height: 20px;
 	text-align: center;
 	font-size: 17px;
-	line-height: 20px;
 	font-family: bitter, serif;
 	font-weight: 400;
 	margin-bottom: -1px;
@@ -1395,9 +1395,9 @@
 	border-style: solid;
 	border-width: 1px;
 	border-color: #E792C4;
+	line-height: 20px;
 	text-align: center;
 	font-size: 17px;
-	line-height: 20px;
 	font-family: bitter, serif;
 	font-weight: 400;
 	position: relative;
@@ -1430,9 +1430,9 @@
 	border-style: solid;
 	border-width: 1px;
 	border-color: #E792C4;
+	line-height: 20px;
 	text-align: center;
 	font-size: 17px;
-	line-height: 20px;
 	font-family: bitter, serif;
 	font-weight: 400;
 	margin-bottom: -1px;
@@ -1468,9 +1468,9 @@
 	border-style: solid;
 	border-width: 1px;
 	border-color: #E792C4;
+	line-height: 20px;
 	text-align: center;
 	font-size: 17px;
-	line-height: 20px;
 	font-family: bitter, serif;
 	font-weight: 400;
 	position: relative;
@@ -1511,9 +1511,9 @@
 	border-style: solid;
 	border-width: 1px;
 	border-color: #E792C4;
+	line-height: 20px;
 	text-align: center;
 	font-size: 17px;
-	line-height: 20px;
 	font-family: bitter, serif;
 	font-weight: 400;
 	margin-bottom: -1px;
@@ -1548,9 +1548,9 @@
 	border-style: solid;
 	border-width: 1px;
 	border-color: #E792C4;
+	line-height: 20px;
 	text-align: center;
 	font-size: 17px;
-	line-height: 20px;
 	font-family: bitter, serif;
 	font-weight: 400;
 	position: relative;
@@ -1574,7 +1574,43 @@
 	background-size: cover;
 }
 
-#u5379-4:hover::before,#u5371-4:hover::before,#u5363-4:hover::before,#u5355-4:hover::before,#u5347-4:hover::before,#u5339-4:hover::before,#u5318-4:hover::before,#u5387-4:hover::before,#u5398-4:hover::before,#u5409-4:hover::before,#u5412-4:hover::before,#u5415-4:hover::before,#u5450-4:hover::before,#u5527-4:hover::before,#u5461-4:hover::before,#u5464-4:hover::before,#u5483-4:hover::before,#u5486-4:hover::before,#u5489-4:hover::before,#u5516-4:hover::before
+#u5633-4
+{
+	z-index: 214;
+	width: 244px;
+	min-height: 154px;
+	-pie-box-shadow: 6px 6px 8px #7F7F7F;
+	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
+	border-style: solid;
+	border-width: 1px;
+	border-color: #E792C4;
+	line-height: 20px;
+	text-align: center;
+	font-size: 17px;
+	font-family: bitter, serif;
+	font-weight: 400;
+	position: relative;
+	margin-right: -10000px;
+	left: 538px;
+	background: #7F7F7F url("../images/green-energy-9.jpg") no-repeat center center;
+	background-size: cover;
+}
+
+#u5633-4:hover
+{
+	-pie-box-shadow: 6px 6px 8px #7F7F7F;
+	box-shadow: 6px 6px 8px rgba(0,0,0,0.5);
+	background-repeat: no-repeat;
+	background-position: center center;
+	padding-top: 0px;
+	padding-bottom: 0px;
+	min-height: 154px;
+	width: 244px;
+	margin: 0px -10000px 0px 0px;
+	background-size: cover;
+}
+
+#u5379-4:hover::before,#u5371-4:hover::before,#u5363-4:hover::before,#u5355-4:hover::before,#u5347-4:hover::before,#u5339-4:hover::before,#u5318-4:hover::before,#u5387-4:hover::before,#u5398-4:hover::before,#u5409-4:hover::before,#u5412-4:hover::before,#u5415-4:hover::before,#u5450-4:hover::before,#u5527-4:hover::before,#u5461-4:hover::before,#u5464-4:hover::before,#u5483-4:hover::before,#u5486-4:hover::before,#u5489-4:hover::before,#u5516-4:hover::before,#u5633-4:hover::before
 {
 	content: "";
 	position: absolute;
@@ -1587,7 +1623,7 @@
 	box-shadow: inset -10px 58px 99px rgba(255,255,255,0.75), inset 10px -58px 99px rgba(0,0,0,0.75);
 }
 
-#u5379-4:hover p,#u5371-4:hover p,#u5363-4:hover p,#u5355-4:hover p,#u5347-4:hover p,#u5339-4:hover p,#u5318-4:hover p,#u5387-4:hover p,#u5398-4:hover p,#u5409-4:hover p,#u5412-4:hover p,#u5415-4:hover p,#u5450-4:hover p,#u5527-4:hover p,#u5461-4:hover p,#u5464-4:hover p,#u5483-4:hover p,#u5486-4:hover p,#u5489-4:hover p,#u5516-4:hover p
+#u5379-4:hover p,#u5371-4:hover p,#u5363-4:hover p,#u5355-4:hover p,#u5347-4:hover p,#u5339-4:hover p,#u5318-4:hover p,#u5387-4:hover p,#u5398-4:hover p,#u5409-4:hover p,#u5412-4:hover p,#u5415-4:hover p,#u5450-4:hover p,#u5527-4:hover p,#u5461-4:hover p,#u5464-4:hover p,#u5483-4:hover p,#u5486-4:hover p,#u5489-4:hover p,#u5516-4:hover p,#u5633-4:hover p
 {
 	color: #FFFFFF;
 	visibility: inherit;
@@ -1595,7 +1631,7 @@
 	padding-top: 62px;
 }
 
-#u5347-2,#u5318-2,#u5387-2,#u5398-2,#u5409-2,#u5412-2,#u5415-2,#u5450-2,#u5527-2,#u5461-2,#u5464-2,#u5483-2,#u5486-2,#u5489-2,#u5516-2
+#u5347-2,#u5318-2,#u5387-2,#u5398-2,#u5409-2,#u5412-2,#u5415-2,#u5450-2,#u5527-2,#u5461-2,#u5464-2,#u5483-2,#u5486-2,#u5489-2,#u5516-2,#u5633-2
 {
 	padding-top: 62px;
 	visibility: hidden;/* 100% transparent text is hidden */
@@ -1607,10 +1643,10 @@
 	width: 782px;
 	min-height: 60px;
 	background-color: transparent;
-	text-align: center;
-	font-size: 25px;
 	color: #E792C4;
 	line-height: 30px;
+	text-align: center;
+	font-size: 25px;
 	font-family: bitter, serif;
 	font-weight: 400;
 	margin-left: 80px;
@@ -1662,9 +1698,9 @@
 	border-width: 1px;
 	border-color: #E792C4;
 	background-color: transparent;
+	line-height: 20px;
 	text-align: center;
 	font-size: 17px;
-	line-height: 20px;
 	font-family: bitter, serif;
 	font-weight: 400;
 	margin-bottom: -5px;
@@ -1711,9 +1747,9 @@
 	border-width: 1px;
 	border-color: #E792C4;
 	background-color: transparent;
+	line-height: 20px;
 	text-align: center;
 	font-size: 17px;
-	line-height: 20px;
 	font-family: bitter, serif;
 	font-weight: 400;
 	margin-bottom: -5px;
@@ -1760,9 +1796,9 @@
 	border-width: 1px;
 	border-color: #E792C4;
 	background-color: transparent;
+	line-height: 20px;
 	text-align: center;
 	font-size: 17px;
-	line-height: 20px;
 	font-family: bitter, serif;
 	font-weight: 400;
 	margin-bottom: -5px;
@@ -1785,10 +1821,10 @@
 	width: 782px;
 	min-height: 24px;
 	background-color: transparent;
-	text-align: left;
-	font-size: 20px;
 	color: #000000;
 	line-height: 24px;
+	text-align: left;
+	font-size: 20px;
 	font-family: bitter, serif;
 	font-weight: 400;
 	position: relative;
@@ -1834,9 +1870,9 @@
 	border-width: 1px;
 	border-color: #E792C4;
 	background-color: transparent;
+	line-height: 20px;
 	text-align: center;
 	font-size: 17px;
-	line-height: 20px;
 	font-family: bitter, serif;
 	font-weight: 400;
 	margin-bottom: -5px;
@@ -1883,9 +1919,9 @@
 	border-width: 1px;
 	border-color: #E792C4;
 	background-color: transparent;
+	line-height: 20px;
 	text-align: center;
 	font-size: 17px;
-	line-height: 20px;
 	font-family: bitter, serif;
 	font-weight: 400;
 	margin-bottom: -5px;
@@ -1944,9 +1980,9 @@
 	border-width: 1px;
 	border-color: #E792C4;
 	background-color: transparent;
+	line-height: 20px;
 	text-align: center;
 	font-size: 17px;
-	line-height: 20px;
 	font-family: bitter, serif;
 	font-weight: 400;
 	margin-bottom: -5px;
