--- a/css/privacy-policy.css
+++ b/css/privacy-policy.css
@@ -1,7 +1,7 @@
 .version.privacy_policy /* version checker */
 {
-	color: #000002;
-	background-color: #D9EACE;
+	color: #0000F2;
+	background-color: #61A8DE;
 }
 
 #muse_css_mq
@@ -447,10 +447,10 @@
 	width: 216px;
 	min-height: 34px;
 	background-color: transparent;
-	text-align: center;
-	font-size: 30px;
 	color: #E792C4;
 	line-height: 36px;
+	text-align: center;
+	font-size: 30px;
 	font-family: bitter, serif;
 	font-weight: 400;
 	position: relative;
