Adobe Muse app updated to version 2018

--- a/css/404.css
+++ b/css/404.css
@@ -1,564 +1,1 @@
-.version._404 /* version checker */
-{
-	color: #0000F8;
-	background-color: #E183BB;
-}
-
-#muse_css_mq
-{
-	background-color: #FFFFFF;
-}
-
-#page
-{
-	z-index: 1;
-	width: 942px;
-	min-height: 761px;
-	background-image: none;
-	border-width: 0px;
-	border-color: #000000;
-	background-color: #333333;
-	margin-left: auto;
-	margin-right: auto;
-}
-
-#pu3090
-{
-	width: 0.01px;
-	margin-right: -10000px;
-	margin-left: -50px;
-}
-
-#u3090
-{
-	z-index: 2;
-	width: 848px;
-	margin-left: 50px;
-	position: relative;
-	padding: 17px 47px 11.049999999999983px;
-}
-
-#u3237-6
-{
-	z-index: 43;
-	width: 308px;
-	min-height: 83px;
-	margin-left: 270px;
-	position: relative;
-}
-
-#menuu3110
-{
-	z-index: 6;
-	width: 848px;
-	margin-top: 6px;
-	position: relative;
-}
-
-#u3111
-{
-	width: 139px;
-	min-height: 34px;
-	position: relative;
-	margin-right: -10000px;
-}
-
-#u3112
-{
-	width: 139px;
-	padding-bottom: 17px;
-	position: relative;
-}
-
-#u3112:hover
-{
-	width: 139px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u3112:active
-{
-	width: 139px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u3114-4
-{
-	width: 139px;
-	min-height: 17px;
-	position: relative;
-	margin-right: -10000px;
-	top: 8px;
-}
-
-#u3112:hover #u3114-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 139px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u3112:active #u3114-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 139px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u3118
-{
-	width: 139px;
-	min-height: 34px;
-	position: relative;
-	margin-right: -10000px;
-	left: 141px;
-}
-
-#u3119
-{
-	width: 139px;
-	padding-bottom: 17px;
-	position: relative;
-}
-
-#u3112.MuseMenuActive,#u3119:hover
-{
-	width: 139px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u3119:active
-{
-	width: 139px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u3119.MuseMenuActive
-{
-	width: 139px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u3122-4
-{
-	width: 139px;
-	min-height: 17px;
-	position: relative;
-	margin-right: -10000px;
-	top: 8px;
-}
-
-#u3112.MuseMenuActive #u3114-4,#u3119:hover #u3122-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 139px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u3119:active #u3122-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 139px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u3119.MuseMenuActive #u3122-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 139px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u4801
-{
-	width: 140px;
-	min-height: 34px;
-	position: relative;
-	margin-right: -10000px;
-	left: 282px;
-}
-
-#u4802
-{
-	width: 140px;
-	padding-bottom: 17px;
-	position: relative;
-}
-
-#u4802:hover
-{
-	width: 140px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u4802:active
-{
-	width: 140px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u4804-4
-{
-	width: 140px;
-	min-height: 17px;
-	position: relative;
-	margin-right: -10000px;
-	top: 8px;
-}
-
-#u4802:hover #u4804-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 140px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u4802:active #u4804-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 140px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u3155
-{
-	width: 140px;
-	min-height: 34px;
-	position: relative;
-	margin-right: -10000px;
-	left: 424px;
-}
-
-#u3156
-{
-	width: 140px;
-	padding-bottom: 17px;
-	position: relative;
-}
-
-#u4802.MuseMenuActive,#u3156:hover
-{
-	width: 140px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u3156:active
-{
-	width: 140px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u3158-4
-{
-	width: 140px;
-	min-height: 17px;
-	position: relative;
-	margin-right: -10000px;
-	top: 8px;
-}
-
-#u4802.MuseMenuActive #u4804-4,#u3156:hover #u3158-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 140px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u3156:active #u3158-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 140px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u3176
-{
-	width: 140px;
-	min-height: 34px;
-	position: relative;
-	margin-right: -10000px;
-	left: 566px;
-}
-
-#u3177
-{
-	width: 140px;
-	padding-bottom: 17px;
-	position: relative;
-}
-
-#u3156.MuseMenuActive,#u3177:hover
-{
-	width: 140px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u3177:active
-{
-	width: 140px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u3178-4
-{
-	width: 140px;
-	min-height: 17px;
-	position: relative;
-	margin-right: -10000px;
-	top: 8px;
-}
-
-#u3156.MuseMenuActive #u3158-4,#u3177:hover #u3178-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 140px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u3177:active #u3178-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 140px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u3197
-{
-	width: 140px;
-	min-height: 34px;
-	position: relative;
-	margin-right: -10000px;
-	left: 708px;
-}
-
-#u3198
-{
-	width: 140px;
-	padding-bottom: 17px;
-	position: relative;
-}
-
-#u3177.MuseMenuActive,#u3198:hover
-{
-	width: 140px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u3198:active
-{
-	width: 140px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u3198.MuseMenuActive
-{
-	width: 140px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u3200-4
-{
-	width: 140px;
-	min-height: 17px;
-	position: relative;
-	margin-right: -10000px;
-	top: 8px;
-}
-
-#u3177.MuseMenuActive #u3178-4,#u3198:hover #u3200-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 140px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u3198:active #u3200-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 140px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u3198.MuseMenuActive #u3200-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 140px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#ppu1417
-{
-	width: 0.01px;
-}
-
-#pu1417
-{
-	width: 0.01px;
-	margin-right: -10000px;
-	margin-top: 25px;
-	margin-left: 130px;
-}
-
-#u1417
-{
-	z-index: 58;
-	width: 782px;
-	height: 502px;
-	position: relative;
-	margin-right: -10000px;
-	background: transparent url("../images/pinguin.png") no-repeat center center;
-	background-size: contain;
-}
-
-#u1423-4
-{
-	z-index: 59;
-	width: 101px;
-	min-height: 27px;
-	background-color: transparent;
-	line-height: 24px;
-	font-size: 20px;
-	font-family: bitter, serif;
-	font-weight: 700;
-	position: relative;
-	margin-right: -10000px;
-	margin-top: 446px;
-	left: 600px;
-}
-
-#u3099
-{
-	z-index: 4;
-	width: 111px;
-	min-height: 271px;
-	position: relative;
-	margin-right: -10000px;
-	margin-top: 11px;
-}
-
-#u3104
-{
-	z-index: 5;
-	width: 17px;
-	height: 515px;
-	position: relative;
-	margin-right: -10000px;
-	left: 50px;
-}
-
-#u3093
-{
-	z-index: 3;
-	width: 862px;
-	padding-left: 80px;
-	padding-top: 30px;
-	padding-bottom: 3px;
-	position: relative;
-	margin-right: -10000px;
-}
-
-#u3252-4
-{
-	z-index: 49;
-	width: 782px;
-	min-height: 19px;
-	position: relative;
-}
-
-#u3252-4:hover
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 19px;
-	width: 782px;
-	margin: 0px;
-}
-
-#u5246-4
-{
-	z-index: 54;
-	width: 104px;
-	min-height: 19px;
-	margin-left: 758px;
-	margin-top: 8px;
-	position: relative;
-}
-
-#u5246-4:hover
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 19px;
-	width: 104px;
-	margin: 8px 0px 0px 758px;
-}
-
-#u4305
-{
-	z-index: 53;
-	width: 33px;
-	min-height: 33px;
-	position: relative;
-	margin-right: -10000px;
-	margin-top: 12px;
-	left: 953px;
-}
-
-.html
-{
-	background-color: #1A1A1A;
-}
-
-body
-{
-	position: relative;
-	min-width: 942px;
-}
-
-.verticalspacer
-{
-	min-height: 5px;
-}
-
+.version._404{color:#00001D;background-color:#54E330;}#muse_css_mq{background-color:#FFFFFF;}#page{z-index:1;width:942px;min-height:761px;background-image:none;border-width:0px;border-color:#000000;background-color:#333333;margin-left:auto;margin-right:auto;}#pu3090{z-index:2;width:0.01px;margin-right:-10000px;margin-left:-50px;}#u3090{z-index:2;width:848px;margin-left:50px;position:relative;padding:17px 47px 11.049999999999983px;}#u3237-6{z-index:43;width:308px;min-height:83px;margin-left:270px;position:relative;}#menuu3110{z-index:6;width:848px;height:34px;margin-top:6px;position:relative;}#u3111{width:139px;min-height:34px;position:relative;margin-right:-10000px;}#u3112{width:139px;padding-bottom:17px;position:relative;}#u3112:hover{width:139px;min-height:0px;margin:0px;}#u3112:active{width:139px;min-height:0px;margin:0px;}#u3114-4{width:139px;min-height:17px;position:relative;margin-right:-10000px;top:8px;}#u3112:hover #u3114-4{padding-top:0px;padding-bottom:0px;min-height:17px;width:139px;margin:0px -10000px 0px 0px;}#u3112:active #u3114-4{padding-top:0px;padding-bottom:0px;min-height:17px;width:139px;margin:0px -10000px 0px 0px;}#u3118{width:139px;min-height:34px;position:relative;margin-right:-10000px;left:141px;}#u3119{width:139px;padding-bottom:17px;position:relative;}#u3112.MuseMenuActive,#u3119:hover{width:139px;min-height:0px;margin:0px;}#u3119:active{width:139px;min-height:0px;margin:0px;}#u3119.MuseMenuActive{width:139px;min-height:0px;margin:0px;}#u3122-4{width:139px;min-height:17px;position:relative;margin-right:-10000px;top:8px;}#u3112.MuseMenuActive #u3114-4,#u3119:hover #u3122-4{padding-top:0px;padding-bottom:0px;min-height:17px;width:139px;margin:0px -10000px 0px 0px;}#u3119:active #u3122-4{padding-top:0px;padding-bottom:0px;min-height:17px;width:139px;margin:0px -10000px 0px 0px;}#u3119.MuseMenuActive #u3122-4{padding-top:0px;padding-bottom:0px;min-height:17px;width:139px;margin:0px -10000px 0px 0px;}#u4801{width:140px;min-height:34px;position:relative;margin-right:-10000px;left:282px;}#u4802{width:140px;padding-bottom:17px;position:relative;}#u4802:hover{width:140px;min-height:0px;margin:0px;}#u4802:active{width:140px;min-height:0px;margin:0px;}#u4804-4{width:140px;min-height:17px;position:relative;margin-right:-10000px;top:8px;}#u4802:hover #u4804-4{padding-top:0px;padding-bottom:0px;min-height:17px;width:140px;margin:0px -10000px 0px 0px;}#u4802:active #u4804-4{padding-top:0px;padding-bottom:0px;min-height:17px;width:140px;margin:0px -10000px 0px 0px;}#u3155{width:140px;min-height:34px;position:relative;margin-right:-10000px;left:424px;}#u3156{width:140px;padding-bottom:17px;position:relative;}#u4802.MuseMenuActive,#u3156:hover{width:140px;min-height:0px;margin:0px;}#u3156:active{width:140px;min-height:0px;margin:0px;}#u3158-4{width:140px;min-height:17px;position:relative;margin-right:-10000px;top:8px;}#u4802.MuseMenuActive #u4804-4,#u3156:hover #u3158-4{padding-top:0px;padding-bottom:0px;min-height:17px;width:140px;margin:0px -10000px 0px 0px;}#u3156:active #u3158-4{padding-top:0px;padding-bottom:0px;min-height:17px;width:140px;margin:0px -10000px 0px 0px;}#u3176{width:140px;min-height:34px;position:relative;margin-right:-10000px;left:566px;}#u3177{width:140px;padding-bottom:17px;position:relative;}#u3156.MuseMenuActive,#u3177:hover{width:140px;min-height:0px;margin:0px;}#u3177:active{width:140px;min-height:0px;margin:0px;}#u3178-4{width:140px;min-height:17px;position:relative;margin-right:-10000px;top:8px;}#u3156.MuseMenuActive #u3158-4,#u3177:hover #u3178-4{padding-top:0px;padding-bottom:0px;min-height:17px;width:140px;margin:0px -10000px 0px 0px;}#u3177:active #u3178-4{padding-top:0px;padding-bottom:0px;min-height:17px;width:140px;margin:0px -10000px 0px 0px;}#u3197{width:140px;min-height:34px;position:relative;margin-right:-10000px;left:708px;}#u3198{width:140px;padding-bottom:17px;position:relative;}#u3177.MuseMenuActive,#u3198:hover{width:140px;min-height:0px;margin:0px;}#u3198:active{width:140px;min-height:0px;margin:0px;}#u3198.MuseMenuActive{width:140px;min-height:0px;margin:0px;}#u3200-4{width:140px;min-height:17px;position:relative;margin-right:-10000px;top:8px;}#u3177.MuseMenuActive #u3178-4,#u3198:hover #u3200-4{padding-top:0px;padding-bottom:0px;min-height:17px;width:140px;margin:0px -10000px 0px 0px;}#u3198:active #u3200-4{padding-top:0px;padding-bottom:0px;min-height:17px;width:140px;margin:0px -10000px 0px 0px;}#u3198.MuseMenuActive #u3200-4{padding-top:0px;padding-bottom:0px;min-height:17px;width:140px;margin:0px -10000px 0px 0px;}#ppu1417{z-index:0;width:0.01px;}#pu1417{z-index:58;width:0.01px;margin-right:-10000px;margin-top:25px;margin-left:130px;}#u1417{z-index:58;width:782px;height:502px;opacity:1;-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";filter:alpha(opacity=100);position:relative;margin-right:-10000px;background:transparent url("../images/pinguin.png?crc=3758782064") no-repeat center center;background-size:contain;}#u1423-4{z-index:59;width:101px;min-height:27px;background-color:transparent;line-height:24px;font-size:20px;font-family:bitter, serif;font-weight:700;position:relative;margin-right:-10000px;margin-top:446px;left:600px;}#u3099{z-index:4;width:111px;min-height:271px;position:relative;margin-right:-10000px;margin-top:11px;}#u3104{z-index:5;width:17px;height:515px;position:relative;margin-right:-10000px;left:50px;}.css_verticalspacer .verticalspacer{height:calc(100vh - 755px);}#u3093{z-index:3;width:862px;padding-left:80px;padding-top:30px;padding-bottom:3px;position:relative;margin-right:-10000px;}#u3252-4{z-index:49;width:782px;min-height:19px;position:relative;}#u3252-4:hover{padding-top:0px;padding-bottom:0px;min-height:19px;width:782px;margin:0px;}#u5246-4{z-index:54;width:104px;min-height:19px;margin-left:758px;margin-top:8px;position:relative;}#u5246-4:hover{padding-top:0px;padding-bottom:0px;min-height:19px;width:104px;margin:8px 0px 0px 758px;}#u4305{z-index:53;width:33px;min-height:33px;position:relative;margin-right:-10000px;margin-top:12px;left:953px;}.html{background-color:#1A1A1A;}body{position:relative;min-width:942px;}.verticalspacer{min-height:5px;}
