--- a/css/iefonts_resume.css
+++ b/css/iefonts_resume.css
@@ -1,36 +1,1 @@
-.subhead
-{
-	font-family: open-sans-condensed-n7, sans-serif;
-}
-
-.subhead-serif
-{
-	font-family: gentium-book-basic-i7, serif;
-}
-
-.White-Link,.Pink-Link,.Character-Style
-{
-	font-family: bitter-n4, serif;
-}
-
-#u3237-6,#u3252-4
-{
-	font-family: bitter-n4, serif;
-}
-
-#u5246-4
-{
-	font-family: bitter-n4, serif;
-}
-
-
-#u1253-121
-{
-	font-family: bitter-n4, serif;
-}
-
-#u1253-62 > #u1253-43:before,#u1253-62 > #u1253-45:before,#u1253-62 > #u1253-47:before,#u1253-62 > #u1253-49:before,#u1253-62 > #u1253-51:before,#u1253-62 > #u1253-53:before,#u1253-62 > #u1253-55:before,#u1253-62 > #u1253-57:before,#u1253-62 > #u1253-59:before,#u1253-62 > #u1253-61:before,#u1253-75 > #u1253-70:before,#u1253-75 > #u1253-72:before,#u1253-75 > #u1253-74:before,#u1253-95 > #u1253-80:before,#u1253-95 > #u1253-82:before,#u1253-95 > #u1253-84:before,#u1253-95 > #u1253-86:before,#u1253-95 > #u1253-88:before,#u1253-95 > #u1253-90:before,#u1253-95 > #u1253-92:before,#u1253-95 > #u1253-94:before,#u1253-103 > #u1253-100:before,#u1253-103 > #u1253-102:before,#u1253-114 > #u1253-109:before,#u1253-114 > #u1253-111:before,#u1253-114 > #u1253-113:before
-{
-	font-family: bitter-n4, Georgia;
-}
-
+.subhead{font-family:open-sans-condensed-n7, sans-serif;}.subhead-serif{font-family:gentium-book-basic-i7, serif;}.White-Link,.Pink-Link,.Character-Style{font-family:bitter-n4, serif;}#u3237-6,#u3252-4{font-family:bitter-n4, serif;}#u5246-4{font-family:bitter-n4, serif;}#u1253-121{font-family:bitter-n4, serif;}#u1253-62 > #u1253-43:before,#u1253-62 > #u1253-45:before,#u1253-62 > #u1253-47:before,#u1253-62 > #u1253-49:before,#u1253-62 > #u1253-51:before,#u1253-62 > #u1253-53:before,#u1253-62 > #u1253-55:before,#u1253-62 > #u1253-57:before,#u1253-62 > #u1253-59:before,#u1253-62 > #u1253-61:before,#u1253-75 > #u1253-70:before,#u1253-75 > #u1253-72:before,#u1253-75 > #u1253-74:before,#u1253-95 > #u1253-80:before,#u1253-95 > #u1253-82:before,#u1253-95 > #u1253-84:before,#u1253-95 > #u1253-86:before,#u1253-95 > #u1253-88:before,#u1253-95 > #u1253-90:before,#u1253-95 > #u1253-92:before,#u1253-95 > #u1253-94:before,#u1253-103 > #u1253-100:before,#u1253-103 > #u1253-102:before,#u1253-114 > #u1253-109:before,#u1253-114 > #u1253-111:before,#u1253-114 > #u1253-113:before{font-family:bitter-n4, Georgia;}
