--- a/css/iefonts_404.css
+++ b/css/iefonts_404.css
@@ -1,31 +1,1 @@
-.subhead
-{
-	font-family: open-sans-condensed-n7, sans-serif;
-}
-
-.subhead-serif
-{
-	font-family: gentium-book-basic-i7, serif;
-}
-
-.White-Link,.Pink-Link,.Character-Style
-{
-	font-family: bitter-n4, serif;
-}
-
-#u3237-6,#u3252-4
-{
-	font-family: bitter-n4, serif;
-}
-
-#u5246-4
-{
-	font-family: bitter-n4, serif;
-}
-
-
-#u1423-4
-{
-	font-family: bitter-n4, serif;
-}
-
+.subhead{font-family:open-sans-condensed-n7, sans-serif;}.subhead-serif{font-family:gentium-book-basic-i7, serif;}.White-Link,.Pink-Link,.Character-Style{font-family:bitter-n4, serif;}#u3237-6,#u3252-4{font-family:bitter-n4, serif;}#u5246-4{font-family:bitter-n4, serif;}#u1423-4{font-family:bitter-n4, serif;}
