--- a/css/privacy-policy.css
+++ b/css/privacy-policy.css
@@ -1,608 +1,1 @@
-.version.privacy_policy /* version checker */
-{
-	color: #0000F2;
-	background-color: #61A8DE;
-}
-
-#muse_css_mq
-{
-	background-color: #FFFFFF;
-}
-
-#page
-{
-	z-index: 1;
-	width: 942px;
-	min-height: 761px;
-	background-image: none;
-	border-width: 0px;
-	border-color: #000000;
-	background-color: #333333;
-	margin-left: auto;
-	margin-right: auto;
-}
-
-#pu3090
-{
-	width: 0.01px;
-	margin-right: -10000px;
-	margin-left: -50px;
-}
-
-#u3090
-{
-	z-index: 2;
-	width: 848px;
-	margin-left: 50px;
-	position: relative;
-	padding: 17px 47px 11.049999999999983px;
-}
-
-#u3237-6
-{
-	z-index: 43;
-	width: 308px;
-	min-height: 83px;
-	margin-left: 270px;
-	position: relative;
-}
-
-#menuu3110
-{
-	z-index: 6;
-	width: 848px;
-	margin-top: 6px;
-	position: relative;
-}
-
-#u3111
-{
-	width: 139px;
-	min-height: 34px;
-	position: relative;
-	margin-right: -10000px;
-}
-
-#u3112
-{
-	width: 139px;
-	padding-bottom: 17px;
-	position: relative;
-}
-
-#u3112:hover
-{
-	width: 139px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u3112:active
-{
-	width: 139px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u3114-4
-{
-	width: 139px;
-	min-height: 17px;
-	position: relative;
-	margin-right: -10000px;
-	top: 8px;
-}
-
-#u3112:hover #u3114-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 139px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u3112:active #u3114-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 139px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u3118
-{
-	width: 139px;
-	min-height: 34px;
-	position: relative;
-	margin-right: -10000px;
-	left: 141px;
-}
-
-#u3119
-{
-	width: 139px;
-	padding-bottom: 17px;
-	position: relative;
-}
-
-#u3112.MuseMenuActive,#u3119:hover
-{
-	width: 139px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u3119:active
-{
-	width: 139px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u3119.MuseMenuActive
-{
-	width: 139px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u3122-4
-{
-	width: 139px;
-	min-height: 17px;
-	position: relative;
-	margin-right: -10000px;
-	top: 8px;
-}
-
-#u3112.MuseMenuActive #u3114-4,#u3119:hover #u3122-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 139px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u3119:active #u3122-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 139px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u3119.MuseMenuActive #u3122-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 139px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u4801
-{
-	width: 140px;
-	min-height: 34px;
-	position: relative;
-	margin-right: -10000px;
-	left: 282px;
-}
-
-#u4802
-{
-	width: 140px;
-	padding-bottom: 17px;
-	position: relative;
-}
-
-#u4802:hover
-{
-	width: 140px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u4802:active
-{
-	width: 140px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u4804-4
-{
-	width: 140px;
-	min-height: 17px;
-	position: relative;
-	margin-right: -10000px;
-	top: 8px;
-}
-
-#u4802:hover #u4804-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 140px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u4802:active #u4804-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 140px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u3155
-{
-	width: 140px;
-	min-height: 34px;
-	position: relative;
-	margin-right: -10000px;
-	left: 424px;
-}
-
-#u3156
-{
-	width: 140px;
-	padding-bottom: 17px;
-	position: relative;
-}
-
-#u4802.MuseMenuActive,#u3156:hover
-{
-	width: 140px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u3156:active
-{
-	width: 140px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u3158-4
-{
-	width: 140px;
-	min-height: 17px;
-	position: relative;
-	margin-right: -10000px;
-	top: 8px;
-}
-
-#u4802.MuseMenuActive #u4804-4,#u3156:hover #u3158-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 140px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u3156:active #u3158-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 140px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u3176
-{
-	width: 140px;
-	min-height: 34px;
-	position: relative;
-	margin-right: -10000px;
-	left: 566px;
-}
-
-#u3177
-{
-	width: 140px;
-	padding-bottom: 17px;
-	position: relative;
-}
-
-#u3156.MuseMenuActive,#u3177:hover
-{
-	width: 140px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u3177:active
-{
-	width: 140px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u3178-4
-{
-	width: 140px;
-	min-height: 17px;
-	position: relative;
-	margin-right: -10000px;
-	top: 8px;
-}
-
-#u3156.MuseMenuActive #u3158-4,#u3177:hover #u3178-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 140px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u3177:active #u3178-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 140px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u3197
-{
-	width: 140px;
-	min-height: 34px;
-	position: relative;
-	margin-right: -10000px;
-	left: 708px;
-}
-
-#u3198
-{
-	width: 140px;
-	padding-bottom: 17px;
-	position: relative;
-}
-
-#u3177.MuseMenuActive,#u3198:hover
-{
-	width: 140px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u3198:active
-{
-	width: 140px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u3198.MuseMenuActive
-{
-	width: 140px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u3200-4
-{
-	width: 140px;
-	min-height: 17px;
-	position: relative;
-	margin-right: -10000px;
-	top: 8px;
-}
-
-#u3177.MuseMenuActive #u3178-4,#u3198:hover #u3200-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 140px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u3198:active #u3200-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 140px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#u3198.MuseMenuActive #u3200-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 140px;
-	margin: 0px -10000px 0px 0px;
-}
-
-#ppu1251-4
-{
-	width: 0.01px;
-	margin-right: -10000px;
-	margin-top: 25px;
-	margin-left: 130px;
-}
-
-#pppu1251-4,#pu1251-4
-{
-	width: 0.01px;
-}
-
-#u1251-4
-{
-	z-index: 121;
-	width: 216px;
-	min-height: 34px;
-	background-color: transparent;
-	color: #E792C4;
-	line-height: 36px;
-	text-align: center;
-	font-size: 30px;
-	font-family: bitter, serif;
-	font-weight: 400;
-	position: relative;
-	margin-right: -10000px;
-	left: 283px;
-}
-
-#u1252
-{
-	z-index: 125;
-	width: 782px;
-	height: 16px;
-	border-style: solid;
-	border-color: #0093C4;
-	background-color: transparent;
-	margin-bottom: -1px;
-	position: relative;
-	margin-right: -10000px;
-	margin-top: 20px;
-	border-width: 0px 0px 1px;
-}
-
-#u1250-63
-{
-	z-index: 58;
-	width: 782px;
-	min-height: 834px;
-	background-color: transparent;
-	font-family: bitter, serif;
-	font-weight: 400;
-	margin-top: 23px;
-	position: relative;
-}
-
-#u1250-7
-{
-	font-size: 20px;
-	line-height: 24px;
-	color: #E792C4;
-}
-
-#u1250-6,#u1250-13,#u1250-20,#u1250-30,#u1250-37,#u1250-44,#u1250-54
-{
-	font-size: 20px;
-	text-align: center;
-	line-height: 24px;
-	color: #E792C4;
-}
-
-#u1250-23,#u1250-57
-{
-	color: #E21E79;
-}
-
-#u1250-2,#u1250-3,#u1250-4,#u1250-9,#u1250-10,#u1250-11,#u1250-14,#u1250-16,#u1250-17,#u1250-18,#u1250-21,#u1250-26,#u1250-27,#u1250-28,#u1250-31,#u1250-33,#u1250-34,#u1250-35,#u1250-38,#u1250-40,#u1250-41,#u1250-42,#u1250-45,#u1250-47,#u1250-48,#u1250-50,#u1250-51,#u1250-52,#u1250-55,#u1250-60,#u1250-61
-{
-	font-size: 16px;
-	line-height: 19px;
-	color: #9E9E9E;
-}
-
-#u3099
-{
-	z-index: 4;
-	width: 111px;
-	min-height: 271px;
-	position: relative;
-	margin-right: -10000px;
-	margin-top: 11px;
-}
-
-#u3104
-{
-	z-index: 5;
-	width: 17px;
-	height: 515px;
-	position: relative;
-	margin-right: -10000px;
-	left: 50px;
-}
-
-#u3093
-{
-	z-index: 3;
-	width: 862px;
-	padding-left: 80px;
-	padding-top: 30px;
-	padding-bottom: 3px;
-	position: relative;
-	margin-right: -10000px;
-}
-
-#u3252-4
-{
-	z-index: 49;
-	width: 782px;
-	min-height: 19px;
-	position: relative;
-}
-
-#u3252-4:hover
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 19px;
-	width: 782px;
-	margin: 0px;
-}
-
-#u5246-4
-{
-	z-index: 54;
-	width: 104px;
-	min-height: 19px;
-	margin-left: 758px;
-	margin-top: 8px;
-	position: relative;
-}
-
-#u5246-4:hover
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 19px;
-	width: 104px;
-	margin: 8px 0px 0px 758px;
-}
-
-#u4305
-{
-	z-index: 53;
-	width: 33px;
-	min-height: 33px;
-	position: relative;
-	margin-right: -10000px;
-	margin-top: 12px;
-	left: 953px;
-}
-
-.html
-{
-	background-color: #1A1A1A;
-}
-
-body
-{
-	position: relative;
-	min-width: 942px;
-}
-
-.verticalspacer
-{
-	min-height: 1px;
-}
-
+.version.privacy_policy{color:#0000E4;background-color:#6A1B3F;}#muse_css_mq{background-color:#FFFFFF;}#page{z-index:1;width:942px;min-height:761px;background-image:none;border-width:0px;border-color:#000000;background-color:#333333;margin-left:auto;margin-right:auto;}#pu3090{z-index:2;width:0.01px;margin-right:-10000px;margin-left:-50px;}#u3090{z-index:2;width:848px;margin-left:50px;position:relative;padding:17px 47px 11.049999999999983px;}#u3237-6{z-index:43;width:308px;min-height:83px;margin-left:270px;position:relative;}#menuu3110{z-index:6;width:848px;height:34px;margin-top:6px;position:relative;}#u3111{width:139px;min-height:34px;position:relative;margin-right:-10000px;}#u3112{width:139px;padding-bottom:17px;position:relative;}#u3112:hover{width:139px;min-height:0px;margin:0px;}#u3112:active{width:139px;min-height:0px;margin:0px;}#u3114-4{width:139px;min-height:17px;position:relative;margin-right:-10000px;top:8px;}#u3112:hover #u3114-4{padding-top:0px;padding-bottom:0px;min-height:17px;width:139px;margin:0px -10000px 0px 0px;}#u3112:active #u3114-4{padding-top:0px;padding-bottom:0px;min-height:17px;width:139px;margin:0px -10000px 0px 0px;}#u3118{width:139px;min-height:34px;position:relative;margin-right:-10000px;left:141px;}#u3119{width:139px;padding-bottom:17px;position:relative;}#u3112.MuseMenuActive,#u3119:hover{width:139px;min-height:0px;margin:0px;}#u3119:active{width:139px;min-height:0px;margin:0px;}#u3119.MuseMenuActive{width:139px;min-height:0px;margin:0px;}#u3122-4{width:139px;min-height:17px;position:relative;margin-right:-10000px;top:8px;}#u3112.MuseMenuActive #u3114-4,#u3119:hover #u3122-4{padding-top:0px;padding-bottom:0px;min-height:17px;width:139px;margin:0px -10000px 0px 0px;}#u3119:active #u3122-4{padding-top:0px;padding-bottom:0px;min-height:17px;width:139px;margin:0px -10000px 0px 0px;}#u3119.MuseMenuActive #u3122-4{padding-top:0px;padding-bottom:0px;min-height:17px;width:139px;margin:0px -10000px 0px 0px;}#u4801{width:140px;min-height:34px;position:relative;margin-right:-10000px;left:282px;}#u4802{width:140px;padding-bottom:17px;position:relative;}#u4802:hover{width:140px;min-height:0px;margin:0px;}#u4802:active{width:140px;min-height:0px;margin:0px;}#u4804-4{width:140px;min-height:17px;position:relative;margin-right:-10000px;top:8px;}#u4802:hover #u4804-4{padding-top:0px;padding-bottom:0px;min-height:17px;width:140px;margin:0px -10000px 0px 0px;}#u4802:active #u4804-4{padding-top:0px;padding-bottom:0px;min-height:17px;width:140px;margin:0px -10000px 0px 0px;}#u3155{width:140px;min-height:34px;position:relative;margin-right:-10000px;left:424px;}#u3156{width:140px;padding-bottom:17px;position:relative;}#u4802.MuseMenuActive,#u3156:hover{width:140px;min-height:0px;margin:0px;}#u3156:active{width:140px;min-height:0px;margin:0px;}#u3158-4{width:140px;min-height:17px;position:relative;margin-right:-10000px;top:8px;}#u4802.MuseMenuActive #u4804-4,#u3156:hover #u3158-4{padding-top:0px;padding-bottom:0px;min-height:17px;width:140px;margin:0px -10000px 0px 0px;}#u3156:active #u3158-4{padding-top:0px;padding-bottom:0px;min-height:17px;width:140px;margin:0px -10000px 0px 0px;}#u3176{width:140px;min-height:34px;position:relative;margin-right:-10000px;left:566px;}#u3177{width:140px;padding-bottom:17px;position:relative;}#u3156.MuseMenuActive,#u3177:hover{width:140px;min-height:0px;margin:0px;}#u3177:active{width:140px;min-height:0px;margin:0px;}#u3178-4{width:140px;min-height:17px;position:relative;margin-right:-10000px;top:8px;}#u3156.MuseMenuActive #u3158-4,#u3177:hover #u3178-4{padding-top:0px;padding-bottom:0px;min-height:17px;width:140px;margin:0px -10000px 0px 0px;}#u3177:active #u3178-4{padding-top:0px;padding-bottom:0px;min-height:17px;width:140px;margin:0px -10000px 0px 0px;}#u3197{width:140px;min-height:34px;position:relative;margin-right:-10000px;left:708px;}#u3198{width:140px;padding-bottom:17px;position:relative;}#u3177.MuseMenuActive,#u3198:hover{width:140px;min-height:0px;margin:0px;}#u3198:active{width:140px;min-height:0px;margin:0px;}#u3198.MuseMenuActive{width:140px;min-height:0px;margin:0px;}#u3200-4{width:140px;min-height:17px;position:relative;margin-right:-10000px;top:8px;}#u3177.MuseMenuActive #u3178-4,#u3198:hover #u3200-4{padding-top:0px;padding-bottom:0px;min-height:17px;width:140px;margin:0px -10000px 0px 0px;}#u3198:active #u3200-4{padding-top:0px;padding-bottom:0px;min-height:17px;width:140px;margin:0px -10000px 0px 0px;}#u3198.MuseMenuActive #u3200-4{padding-top:0px;padding-bottom:0px;min-height:17px;width:140px;margin:0px -10000px 0px 0px;}#pppu1251-4{z-index:0;width:0.01px;}#ppu1251-4{z-index:0;width:0.01px;margin-right:-10000px;margin-top:25px;margin-left:130px;}#pu1251-4{z-index:121;width:0.01px;}#u1251-4{z-index:121;width:216px;min-height:34px;background-color:transparent;line-height:36px;color:#E792C4;text-align:center;font-size:30px;font-family:bitter, serif;font-weight:400;position:relative;margin-right:-10000px;left:283px;}#u1252{z-index:125;width:782px;height:16px;border-style:solid;border-color:#0093C4;background-color:transparent;margin-bottom:-1px;position:relative;margin-right:-10000px;margin-top:20px;border-width:0px 0px 1px;}#u1250-63{z-index:58;width:782px;min-height:834px;background-color:transparent;font-family:bitter, serif;font-weight:400;margin-top:23px;position:relative;}#u1250-7{font-size:20px;line-height:24px;color:#E792C4;}#u1250-6,#u1250-13,#u1250-20,#u1250-30,#u1250-37,#u1250-44,#u1250-54{font-size:20px;text-align:center;line-height:24px;color:#E792C4;}#u1250-23,#u1250-57{color:#E21E79;}#u1250-2,#u1250-3,#u1250-4,#u1250-9,#u1250-10,#u1250-11,#u1250-14,#u1250-16,#u1250-17,#u1250-18,#u1250-21,#u1250-26,#u1250-27,#u1250-28,#u1250-31,#u1250-33,#u1250-34,#u1250-35,#u1250-38,#u1250-40,#u1250-41,#u1250-42,#u1250-45,#u1250-47,#u1250-48,#u1250-50,#u1250-51,#u1250-52,#u1250-55,#u1250-60,#u1250-61{font-size:16px;line-height:19px;color:#9E9E9E;}#u3099{z-index:4;width:111px;min-height:271px;position:relative;margin-right:-10000px;margin-top:11px;}#u3104{z-index:5;width:17px;height:515px;position:relative;margin-right:-10000px;left:50px;}.css_verticalspacer .verticalspacer{height:calc(100vh - 1474px);}#u3093{z-index:3;width:862px;padding-left:80px;padding-top:30px;padding-bottom:3px;position:relative;margin-right:-10000px;}#u3252-4{z-index:49;width:782px;min-height:19px;position:relative;}#u3252-4:hover{padding-top:0px;padding-bottom:0px;min-height:19px;width:782px;margin:0px;}#u5246-4{z-index:54;width:104px;min-height:19px;margin-left:758px;margin-top:8px;position:relative;}#u5246-4:hover{padding-top:0px;padding-bottom:0px;min-height:19px;width:104px;margin:8px 0px 0px 758px;}#u4305{z-index:53;width:33px;min-height:33px;position:relative;margin-right:-10000px;margin-top:12px;left:953px;}.html{background-color:#1A1A1A;}body{position:relative;min-width:942px;}.verticalspacer{min-height:1px;}
