--- a/css/website-karolinaray_tk.css
+++ b/css/website-karolinaray_tk.css
@@ -1,107 +1,1 @@
-.version.website_karolinaray_tk /* version checker */
-{
-	color: #000004;
-	background-color: #5B10A5;
-}
-
-#muse_css_mq
-{
-	background-color: #FFFFFF;
-}
-
-#page
-{
-	z-index: 1;
-	width: 600px;
-	min-height: 500px;
-	background-image: none;
-	border-width: 0px;
-	border-color: #000000;
-	background-color: transparent;
-	margin-left: auto;
-	margin-right: auto;
-}
-
-#page_position_content
-{
-	padding-top: 13px;
-	width: 0.01px;/* should not cover content below */
-}
-
-#u1721-7
-{
-	z-index: 18;
-	width: 600px;
-	min-height: 64px;
-	background-color: transparent;
-	text-align: center;
-	font-family: bitter, serif;
-	font-weight: 400;
-	position: relative;
-}
-
-#u1721-2
-{
-	font-size: 25px;
-	line-height: 30px;
-}
-
-#u1721-5
-{
-	font-size: 20px;
-	line-height: 24px;
-	color: #FFFFFF;
-}
-
-#u1781-6
-{
-	z-index: 26;
-	width: 600px;
-	min-height: 33px;
-	background-color: transparent;
-	line-height: 19px;
-	font-size: 16px;
-	font-family: bitter, serif;
-	font-weight: 400;
-	position: relative;
-}
-
-#u1723
-{
-	z-index: 25;
-	width: 600px;
-	height: 330px;
-	position: relative;
-	background: transparent url("../images/karolinaraytk%20(home).jpg") no-repeat center center;
-	background-size: contain;
-}
-
-#u1722-16
-{
-	z-index: 2;
-	width: 600px;
-	min-height: 56px;
-	background-color: transparent;
-	line-height: 19px;
-	font-size: 16px;
-	font-family: bitter, serif;
-	font-weight: 400;
-	position: relative;
-}
-
-#u1722-2,#u1722-5,#u1722-10
-{
-	color: #FFFFFF;
-}
-
-.html
-{
-	background-color: #FF99FF;
-}
-
-body
-{
-	position: relative;
-	min-width: 600px;
-}
-
+.version.website_karolinaray_tk{color:#0000F0;background-color:#DE5807;}#muse_css_mq{background-color:#FFFFFF;}#page{z-index:1;width:600px;min-height:500px;background-image:none;border-width:0px;border-color:#000000;background-color:transparent;margin-left:auto;margin-right:auto;}#page_position_content{padding-top:13px;width:0.01px;}#u1721-7{z-index:18;width:600px;min-height:64px;background-color:transparent;text-align:center;font-family:bitter, serif;font-weight:400;position:relative;}#u1721-2{font-size:25px;line-height:30px;}#u1721-5{font-size:20px;line-height:24px;color:#FFFFFF;}#u1781-6{z-index:26;width:600px;min-height:33px;background-color:transparent;line-height:19px;font-size:16px;font-family:bitter, serif;font-weight:400;position:relative;}#u1723{z-index:25;width:600px;height:330px;opacity:1;-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";filter:alpha(opacity=100);position:relative;background:transparent url("../images/karolinaraytk%20(home).jpg?crc=74012356") no-repeat center center;background-size:contain;}#u1722-16{z-index:2;width:600px;min-height:56px;background-color:transparent;line-height:19px;font-size:16px;font-family:bitter, serif;font-weight:400;position:relative;}#u1722-2,#u1722-5,#u1722-10{color:#FFFFFF;}.css_verticalspacer .verticalspacer{height:calc(100vh - 596px);}.html{background-color:#FF99FF;}body{position:relative;min-width:600px;}
