--- a/css/website-milenarussianprincess_tk.css
+++ b/css/website-milenarussianprincess_tk.css
@@ -1,113 +1,1 @@
-.version.website_milenarussianprincess_tk /* version checker */
-{
-	color: #0000F8;
-	background-color: #631437;
-}
-
-#muse_css_mq
-{
-	background-color: #FFFFFF;
-}
-
-#page
-{
-	z-index: 1;
-	width: 600px;
-	min-height: 500px;
-	background-image: none;
-	border-width: 0px;
-	border-color: #000000;
-	background-color: transparent;
-	margin-left: auto;
-	margin-right: auto;
-}
-
-#page_position_content
-{
-	padding-top: 13px;
-	width: 0.01px;/* should not cover content below */
-}
-
-#u4344-6
-{
-	z-index: 18;
-	width: 600px;
-	min-height: 64px;
-	background-color: transparent;
-	text-align: center;
-	font-family: bitter, serif;
-	font-weight: 400;
-	position: relative;
-}
-
-#u4344-2
-{
-	font-size: 25px;
-	line-height: 30px;
-}
-
-#u4344-4
-{
-	font-size: 20px;
-	text-transform: none;
-	line-height: 24px;
-	color: #FFFFFF;
-}
-
-#u4342-6
-{
-	z-index: 25;
-	width: 600px;
-	min-height: 42px;
-	background-color: transparent;
-	line-height: 19px;
-	font-size: 16px;
-	font-family: bitter, serif;
-	font-weight: 400;
-	position: relative;
-}
-
-#u4342-3,#u4342-4
-{
-	color: #000000;
-}
-
-#u4345
-{
-	z-index: 24;
-	width: 600px;
-	height: 305px;
-	position: relative;
-	background: transparent url("../images/milenarussianprincess.jpg") no-repeat right top;
-	background-size: cover;
-}
-
-#u4343-16
-{
-	z-index: 2;
-	width: 600px;
-	min-height: 66px;
-	background-color: transparent;
-	line-height: 19px;
-	font-size: 16px;
-	font-family: bitter, serif;
-	font-weight: 400;
-	position: relative;
-}
-
-#u4343-2,#u4343-5,#u4343-10
-{
-	color: #FFFFFF;
-}
-
-.html
-{
-	background-color: #FF99FF;
-}
-
-body
-{
-	position: relative;
-	min-width: 600px;
-}
-
+.version.website_milenarussianprincess_tk{color:#0000F9;background-color:#1866CF;}#muse_css_mq{background-color:#FFFFFF;}#page{z-index:1;width:600px;min-height:500px;background-image:none;border-width:0px;border-color:#000000;background-color:transparent;margin-left:auto;margin-right:auto;}#page_position_content{padding-top:13px;width:0.01px;}#u4344-6{z-index:18;width:600px;min-height:64px;background-color:transparent;text-align:center;font-family:bitter, serif;font-weight:400;position:relative;}#u4344-2{font-size:25px;line-height:30px;}#u4344-4{font-size:20px;text-transform:none;line-height:24px;color:#FFFFFF;}#u4342-6{z-index:25;width:600px;min-height:42px;background-color:transparent;line-height:19px;font-size:16px;font-family:bitter, serif;font-weight:400;position:relative;}#u4342-3,#u4342-4{color:#000000;}#u4345{z-index:24;width:600px;height:305px;opacity:1;-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";filter:alpha(opacity=100);position:relative;background:transparent url("../images/milenarussianprincess.jpg?crc=9317620") no-repeat right top;background-size:cover;}#u4343-16{z-index:2;width:600px;min-height:66px;background-color:transparent;line-height:19px;font-size:16px;font-family:bitter, serif;font-weight:400;position:relative;}#u4343-2,#u4343-5,#u4343-10{color:#FFFFFF;}.css_verticalspacer .verticalspacer{height:calc(100vh - 552px);}.html{background-color:#FF99FF;}body{position:relative;min-width:600px;}
